# signet-forge

./: Cargo.toml  README.md  RELEASE_NOTES_v1.1.12.md  RELEASE_NOTES_v1.1.7.md  ROADMAP.md  install.sh
.github/workflows/: build.yml  release.yml
changelogs/: README.md  RELEASE_NOTES_v1.1.10.md  RELEASE_NOTES_v1.1.11.md  RELEASE_NOTES_v1.1.13.md  RELEASE_NOTES_v1.1.14.md  RELEASE_NOTES_v1.1.8.md  RELEASE_NOTES_v1.1.9.md
crates/forge-agent/: Cargo.toml
crates/forge-agent/src/: agent_loop.rs  context.rs  history.rs  lib.rs  permissions.rs  session.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: auth.rs  main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  error.rs  lib.rs  message.rs  tool.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: lib.rs  protocol.rs  stdio.rs
crates/forge-provider/: Cargo.toml
crates/forge-provider/src/: anthropic.rs  cli.rs  gemini.rs  lib.rs  openai.rs  streaming.rs
crates/forge-signet/: Cargo.toml
crates/forge-signet/src/: client.rs  config.rs  hooks.rs  lib.rs  memory.rs  recall_cache.rs  secrets.rs  skills.rs  watcher.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  marketplace.rs  plugin.rs  read.rs  signet.rs  subagent.rs  webfetch.rs  websearch.rs  write.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: app.rs  chrome.rs  input.rs  keybinds.rs  lib.rs  mcp_config.rs  settings.rs  theme.rs  voice.rs
crates/forge-tui/src/views/: chat.rs  command_palette.rs  dashboard_nav.rs  dashboard_panel.rs  forge_usage.rs  keybind_editor.rs  mod.rs  model_picker.rs  session_browser.rs  signet_commands.rs
crates/forge-tui/src/widgets/: image_view.rs  markdown.rs  mod.rs  status_bar.rs
docs/: ARCHITECTURE.md  AUTH_AND_MODELS.md  MEMORY_ARCHITECTURE.md  SLASH_COMMANDS.md
