[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { workspace = true }
forge-provider = { workspace = true }
forge-agent = { workspace = true }
forge-signet = { workspace = true }
forge-tui = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
forge-tools = { workspace = true }
futures = { workspace = true }
