[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { workspace = true }
forge-provider = { workspace = true }
forge-agent = { workspace = true }
forge-signet = { workspace = true }
forge-tui = { workspace = true, default-features = false }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
forge-tools = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

[features]
default = ["voice"]
voice = ["forge-tui/voice"]
